--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
